--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="sketch-container"></div>
             <div class="right-container">
-                <button class="clear-form">Reset</button>
+                <button class="clear-sketch">Reset</button>
             </div>
         </div>
     </body>
